    * when a component is added, (either via r.add() or dep resolution)
      is automatically added as well (though not all its sibling components)
    * added r.removeComponents(<complist>), which allows you
      to create a group where all devel components are byDefault False,
      for example. r.removeComponents(['devel', 'devellib'])
    * store labelPath used to build a group in troveInfo

  o Client Changes:
    * When committing source changes in interactive mode, conary will ask you
      you to confirm the commit.
    * A new configuration option, autoResolvePackages, tells conary to install
      the packages that include the components needed for dep resolution.
    * You can now install locally cooked groups.
    * Added script to mirror repositories
    * If foo is a redirect to bar, and you run 'conary update foo' when
      foo is not installed on your system, conary will act as if you had
      typed 'conary update bar'.  Previously, it would act as if you had typed
      'conary update bar --no-recurse'.

  o Code structure:
    * Conary now has the concept of "weak references", where a weak reference
      allows conary to be able to recognize the relationship between a
      collection and the children of collections it contains.  This allows
      us to add several new features to conary, documented in Client and Build
      changes.
    * SQL operations have been migrated to the dbstore driver to allow
      for an easier switch of the database backends for the server side.
    * Various query and code structure optimizations have been
      implemented to allow running under MySQL and PostgreSQL

  o Config Changes:
    * Conary config handling now supports comments at the end of config lines.
      # can be escaped by a \ to use a literal # in a configuration option.
    * Default macros used in cooking are now stored in /etc/conary/macros.
      The 'defaultMacros' parameter determines where cvc searches for macro
      definitions.