@@ -459,9 +459,10 @@ def cookGroupObject(repos, db, cfg, recipeClass, sourceVersion, macros={},
                             weakRef=not explicit, *troveTup)
 
 	# add groups which were newly created by this group. 
-	for name, byDefault in group.iterNewGroupList():
+	for name, byDefault, explicit in group.iterNewGroupList():
 	    grpTrv.addTrove(name, targetVersion, grpFlavor, 
-                            byDefault = byDefault)
+                            byDefault = byDefault, 
+                            weakRef = not explicit)
 
         grpDiff = grpTrv.diff(None, absolute = 1)[0]
         changeSet.newTrove(grpDiff)
